kanc/src/tests/sample_code/should_fail/single_file/type_check/cannot_infer_type_of_empty_match.ph
type Empty {}

type Unit {
    .C: Unit,
}

type Bool {
    .True: Bool,
    .False: Bool,
}

let foo = fun _(e: Empty): Bool {
    match match e {} {
        .C => Bool.True,
    }
};
